logs/lessrb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lessrb'...
Compiling './lib/python3.5/site-packages/lessrb/__init__.py'...
***   File "./lib/python3.5/site-packages/lessrb/__init__.py", line 8
    os.chmod(lessbin, 0755)
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/lessrb/rb'...
Listing './lib/python3.5/site-packages/lessrb/rb/bin'...
Listing './lib/python3.5/site-packages/lessrb/rb/lib'...
Listing './lib/python3.5/site-packages/lessrb/rb/lib/less'...
Listing './lib/python3.5/site-packages/lessrb/rb/lib/less/engine'...
Listing './lib/python3.5/site-packages/lessrb/rb/lib/less/engine/grammar'...
Listing './lib/python3.5/site-packages/lessrb/rb/lib/less/engine/nodes'...
Listing './lib/python3.5/site-packages/lessrb/rb/spec'...
Listing './lib/python3.5/site-packages/lessrb/rb/spec/css'...
Listing './lib/python3.5/site-packages/lessrb/rb/spec/less'...
Listing './lib/python3.5/site-packages/lessrb/rb/spec/less/exceptions'...
Listing './lib/python3.5/site-packages/lessrb/rb/spec/less/extra_import_path'...
Listing './lib/python3.5/site-packages/lessrb/rb/spec/less/extra_import_path/import'...
Listing './lib/python3.5/site-packages/lessrb/rb/spec/less/import'...
Listing './lib/python3.5/site-packages/lessrb-0.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
